# fastapi-org-directory

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20240411_0001_initial.py
src/: main.py
src/api/: __init__.py  dependencies.py
src/api/routers/: __init__.py  activities.py  buildings.py  organizations.py
src/config/: __init__.py  settings.py
src/core/: startup.py
src/db/: base.py  session.py
src/mappers/: __init__.py  activity.py  building.py  organization.py
src/models/: __init__.py  activity.py  building.py  organization.py
src/repositories/: __init__.py  activity.py  building.py  organization.py
src/schemas/: __init__.py  activity.py  base.py  building.py  organization.py
src/services/: __init__.py  activity.py  building.py  organization.py
tests/: test_mappers.py  test_services.py
